# nitpicker-daemon

./: .gitignore  CLAUDE.md  README.md  Run_CLI.bat  Run_Daemon.bat  Run_Gemini.bat  Run_Live_Review.bat  Run_Local.bat  Run_Tests.bat  Run_Watch.bat  Set_Env.bat  Taskfile.yml  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: expert.agent.md
.github/prompts/: nitpicker-review-loop.prompt.md
config/: nitpicker.local.example.json  reviewer_config.yaml  system_prompt.md
config/profiles/: general.yaml
config/rules/: RULES.md
src/jemmin/: __init__.py  mini_reviewer.py  models.py
src/jemmin/agents/: architecture.py  context_agent.py  domain_rule.py  fast_gate.py  incident_triage.py  patch_agent.py  performance.py  security.py  verification_agent.py
src/jemmin/analyzers/: __init__.py  ast_security.py  base.py
src/jemmin/artifacts/: __init__.py  base.py
src/jemmin/context/: __init__.py
src/jemmin/ipc/: zmq_client.py  (+2 more)
tests/: conftest.py  test_agents.py  test_audit_trail.py  test_auto_fix.py  test_cli_diff_input.py  test_cli_exit_code_gate.py  test_daemon_handler.py  test_generate_review.py  test_jemmin_daemon.py  test_load_settings.py  test_mini_reviewer.py  test_notifier.py  test_orchestrator_flows.py  test_phase_d.py  test_phase_e.py  test_phase_f.py  test_phase_g.py  test_phase_h.py  test_phase_i.py  test_phase_ii.py  test_phase_iii.py  test_phase_iv.py  test_phase_v.py  test_phase_vi.py  test_phase_vii.py  test_prompt_loader.py  test_provider_plugin.py  test_report_generator.py  test_sad_paths.py  test_smoke.py  test_staged_review.py
(+42 files in other folders)
