[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-research-review"
version = "0.1.0"
description = "Phase A scaffold for a local-first hybrid AI review platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"google-genai>=1.7.0",
	"pytest>=8.3.0",
	"watchdog>=6.0.0",
	"pyzmq>=26.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
